--- a/404.html
+++ b/404.html
@@ -1,9 +1,4 @@
----
-permalink: /404.html
-layout: default
----
-
-<style type="text/css" media="screen">
+<style>
   .container {
     margin: 10px auto;
     max-width: 600px;
@@ -16,10 +11,8 @@ layout: default
     letter-spacing: -1px;
   }
 </style>
-
 <div class="container">
   <h1>404</h1>
-
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
 </div>
